// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiProvider applying modifications propagates \`modify\` 1`] = `
<EuiThemeProvider
  modify={
    Object {
      "colors": Object {
        "DARK": Object {
          "lightShade": "#394c4b",
        },
        "LIGHT": Object {
          "lightShade": "#d3e6df",
        },
      },
    }
  }
  theme={
    Object {
      "animation": Object {
        "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
        "extraFast": "90ms",
        "extraSlow": "500ms",
        "fast": "150ms",
        "normal": "250ms",
        "resistance": "cubic-bezier(.694, .0482, .335, 1)",
        "slow": "350ms",
      },
      "base": 16,
      "border": Object {
        "color": Computed {
          "computer": [Function],
          "dependencies": Array [
            "colors.lightShade",
          ],
        },
        "editable": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "radius": Object {
          "medium": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "small": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "thick": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "thin": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "width": Object {
          "thick": "2px",
          "thin": "1px",
        },
      },
      "breakpoint": Object {
        "l": 992,
        "m": 768,
        "s": 575,
        "xl": 1200,
        "xs": 0,
      },
      "colors": Object {
        "DARK": Object {
          "accent": "#F68FBE",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#F86B63",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#98A2B3",
          "darkestShade": "#D4DAE5",
          "disabled": "#515761",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#1D1E24",
          "fullShade": "#FFF",
          "highlight": "#2E2D25",
          "lightShade": "#343741",
          "lightestShade": "#25262E",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#535966",
          "primary": "#36A2EF",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#7DDED8",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": "#DFE5EF",
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#F3D371",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "LIGHT": Object {
          "accent": "#F04E98",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#BD271E",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#69707D",
          "darkestShade": "#343741",
          "disabled": "#ABB4C4",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#FFF",
          "fullShade": "#000",
          "highlight": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.warning",
            ],
          },
          "lightShade": "#D3DAE6",
          "lightestShade": "#f0f4fb",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#98A2B3",
          "primary": "#07C",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#00BFB3",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#FEC514",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "ghost": "#FFF",
        "ink": "#000",
      },
      "font": Object {
        "baseline": Computed {
          "computer": [Function],
          "dependencies": Array [
            "base",
          ],
        },
        "body": Object {
          "scale": "s",
          "weight": "regular",
        },
        "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
        "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
        "lineHeightMultiplier": 1.5,
        "scale": Object {
          "l": 1.25,
          "m": 1,
          "s": 0.875,
          "xl": 1.75,
          "xs": 0.75,
          "xxl": 2.125,
          "xxs": 0.6875,
          "xxxs": 0.5625,
        },
        "weight": Object {
          "bold": 700,
          "light": 300,
          "medium": 500,
          "regular": 400,
          "semiBold": 600,
        },
      },
      "size": Object {
        "base": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "l": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "m": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "s": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
      },
    }
  }
>
  <EuiGlobalStyles />
</EuiThemeProvider>
`;

exports[`EuiProvider changing color modes propagates \`colorMode\` 1`] = `
<EuiThemeProvider
  colorMode="dark"
  theme={
    Object {
      "animation": Object {
        "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
        "extraFast": "90ms",
        "extraSlow": "500ms",
        "fast": "150ms",
        "normal": "250ms",
        "resistance": "cubic-bezier(.694, .0482, .335, 1)",
        "slow": "350ms",
      },
      "base": 16,
      "border": Object {
        "color": Computed {
          "computer": [Function],
          "dependencies": Array [
            "colors.lightShade",
          ],
        },
        "editable": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "radius": Object {
          "medium": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "small": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "thick": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "thin": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "width": Object {
          "thick": "2px",
          "thin": "1px",
        },
      },
      "breakpoint": Object {
        "l": 992,
        "m": 768,
        "s": 575,
        "xl": 1200,
        "xs": 0,
      },
      "colors": Object {
        "DARK": Object {
          "accent": "#F68FBE",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#F86B63",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#98A2B3",
          "darkestShade": "#D4DAE5",
          "disabled": "#515761",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#1D1E24",
          "fullShade": "#FFF",
          "highlight": "#2E2D25",
          "lightShade": "#343741",
          "lightestShade": "#25262E",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#535966",
          "primary": "#36A2EF",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#7DDED8",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": "#DFE5EF",
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#F3D371",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "LIGHT": Object {
          "accent": "#F04E98",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#BD271E",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#69707D",
          "darkestShade": "#343741",
          "disabled": "#ABB4C4",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#FFF",
          "fullShade": "#000",
          "highlight": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.warning",
            ],
          },
          "lightShade": "#D3DAE6",
          "lightestShade": "#f0f4fb",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#98A2B3",
          "primary": "#07C",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#00BFB3",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#FEC514",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "ghost": "#FFF",
        "ink": "#000",
      },
      "font": Object {
        "baseline": Computed {
          "computer": [Function],
          "dependencies": Array [
            "base",
          ],
        },
        "body": Object {
          "scale": "s",
          "weight": "regular",
        },
        "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
        "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
        "lineHeightMultiplier": 1.5,
        "scale": Object {
          "l": 1.25,
          "m": 1,
          "s": 0.875,
          "xl": 1.75,
          "xs": 0.75,
          "xxl": 2.125,
          "xxs": 0.6875,
          "xxxs": 0.5625,
        },
        "weight": Object {
          "bold": 700,
          "light": 300,
          "medium": 500,
          "regular": 400,
          "semiBold": 600,
        },
      },
      "size": Object {
        "base": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "l": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "m": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "s": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
      },
    }
  }
>
  <EuiGlobalStyles />
</EuiThemeProvider>
`;

exports[`EuiProvider changing themes propagates \`theme\` 1`] = `
<EuiThemeProvider
  theme={
    Object {
      "animation": Object {
        "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
        "extraFast": "90ms",
        "extraSlow": "500ms",
        "fast": "150ms",
        "normal": "250ms",
        "resistance": "cubic-bezier(.694, .0482, .335, 1)",
        "slow": "350ms",
      },
      "base": 16,
      "border": Object {
        "color": Computed {
          "computer": [Function],
          "dependencies": Array [
            "colors.lightShade",
          ],
        },
        "editable": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "radius": Object {
          "medium": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "small": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "thick": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "thin": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "width": Object {
          "thick": "2px",
          "thin": "1px",
        },
      },
      "breakpoint": Object {
        "l": 992,
        "m": 768,
        "s": 575,
        "xl": 1200,
        "xs": 0,
      },
      "colors": Object {
        "DARK": Object {
          "accent": "#F990C0",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#F66",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#98A2B3",
          "darkestShade": "#D4DAE5",
          "disabled": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#1D1E24",
          "fullShade": "#FFF",
          "highlight": "#2E2D25",
          "lightShade": "#343741",
          "lightestShade": "#25262E",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#535966",
          "primary": "#1BA9F5",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#7DE2D1",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": "#DFE5EF",
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#FFCE7A",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "LIGHT": Object {
          "accent": "#DD0A73",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#BD271E",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#69707D",
          "darkestShade": "#343741",
          "disabled": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#FFF",
          "fullShade": "#000",
          "highlight": "#FFFCDD",
          "lightShade": "#D3DAE6",
          "lightestShade": "#F5F7FA",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#98A2B3",
          "primary": "#006BB4",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#017D73",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors",
            ],
          },
          "warning": "#F5A700",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "ghost": "#FFF",
        "ink": "#000",
      },
      "font": Object {
        "baseline": Computed {
          "computer": [Function],
          "dependencies": Array [
            "base",
          ],
        },
        "body": Object {
          "letterSpacing": "-.005em",
          "scale": "m",
          "weight": "regular",
        },
        "family": "'Inter UI', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
        "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
        "lineHeightMultiplier": 1.5,
        "scale": Object {
          "l": 1.25,
          "m": 1,
          "s": 0.875,
          "xl": 1.75,
          "xs": 0.75,
          "xxl": 2.125,
          "xxs": 0.6875,
          "xxxs": 0.5625,
        },
        "weight": Object {
          "bold": 700,
          "light": 300,
          "medium": 500,
          "regular": 400,
          "semiBold": 600,
        },
      },
      "size": Object {
        "base": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "l": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "m": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "s": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
      },
    }
  }
>
  <EuiGlobalStyles />
</EuiThemeProvider>
`;

exports[`EuiProvider is rendered 1`] = `
<EuiThemeProvider
  theme={
    Object {
      "animation": Object {
        "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
        "extraFast": "90ms",
        "extraSlow": "500ms",
        "fast": "150ms",
        "normal": "250ms",
        "resistance": "cubic-bezier(.694, .0482, .335, 1)",
        "slow": "350ms",
      },
      "base": 16,
      "border": Object {
        "color": Computed {
          "computer": [Function],
          "dependencies": Array [
            "colors.lightShade",
          ],
        },
        "editable": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "radius": Object {
          "medium": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "small": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "thick": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "thin": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "width": Object {
          "thick": "2px",
          "thin": "1px",
        },
      },
      "breakpoint": Object {
        "l": 992,
        "m": 768,
        "s": 575,
        "xl": 1200,
        "xs": 0,
      },
      "colors": Object {
        "DARK": Object {
          "accent": "#F68FBE",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#F86B63",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#98A2B3",
          "darkestShade": "#D4DAE5",
          "disabled": "#515761",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#1D1E24",
          "fullShade": "#FFF",
          "highlight": "#2E2D25",
          "lightShade": "#343741",
          "lightestShade": "#25262E",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#535966",
          "primary": "#36A2EF",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#7DDED8",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": "#DFE5EF",
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#F3D371",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "LIGHT": Object {
          "accent": "#F04E98",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#BD271E",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#69707D",
          "darkestShade": "#343741",
          "disabled": "#ABB4C4",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#FFF",
          "fullShade": "#000",
          "highlight": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.warning",
            ],
          },
          "lightShade": "#D3DAE6",
          "lightestShade": "#f0f4fb",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#98A2B3",
          "primary": "#07C",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#00BFB3",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#FEC514",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "ghost": "#FFF",
        "ink": "#000",
      },
      "font": Object {
        "baseline": Computed {
          "computer": [Function],
          "dependencies": Array [
            "base",
          ],
        },
        "body": Object {
          "scale": "s",
          "weight": "regular",
        },
        "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
        "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
        "lineHeightMultiplier": 1.5,
        "scale": Object {
          "l": 1.25,
          "m": 1,
          "s": 0.875,
          "xl": 1.75,
          "xs": 0.75,
          "xxl": 2.125,
          "xxs": 0.6875,
          "xxxs": 0.5625,
        },
        "weight": Object {
          "bold": 700,
          "light": 300,
          "medium": 500,
          "regular": 400,
          "semiBold": 600,
        },
      },
      "size": Object {
        "base": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "l": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "m": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "s": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
      },
    }
  }
>
  <EuiGlobalStyles />
</EuiThemeProvider>
`;

exports[`EuiProvider providing an @emotion cache config applies the cache to global styles 1`] = `
<EuiThemeProvider
  theme={
    Object {
      "animation": Object {
        "bounce": "cubic-bezier(.34, 1.61, .7, 1)",
        "extraFast": "90ms",
        "extraSlow": "500ms",
        "fast": "150ms",
        "normal": "250ms",
        "resistance": "cubic-bezier(.694, .0482, .335, 1)",
        "slow": "350ms",
      },
      "base": 16,
      "border": Object {
        "color": Computed {
          "computer": [Function],
          "dependencies": Array [
            "colors.lightShade",
          ],
        },
        "editable": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "radius": Object {
          "medium": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "small": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "thick": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "thin": Computed {
          "computer": [Function],
          "dependencies": Array [
            "border.width",
            "border.color",
          ],
        },
        "width": Object {
          "thick": "2px",
          "thin": "1px",
        },
      },
      "breakpoint": Object {
        "l": 992,
        "m": 768,
        "s": 575,
        "xl": 1200,
        "xs": 0,
      },
      "colors": Object {
        "DARK": Object {
          "accent": "#F68FBE",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#F86B63",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#98A2B3",
          "darkestShade": "#D4DAE5",
          "disabled": "#515761",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#1D1E24",
          "fullShade": "#FFF",
          "highlight": "#2E2D25",
          "lightShade": "#343741",
          "lightestShade": "#25262E",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#535966",
          "primary": "#36A2EF",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#7DDED8",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": "#DFE5EF",
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#F3D371",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "LIGHT": Object {
          "accent": "#F04E98",
          "accentText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "body": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.lightestShade",
            ],
          },
          "danger": "#BD271E",
          "dangerText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "darkShade": "#69707D",
          "darkestShade": "#343741",
          "disabled": "#ABB4C4",
          "disabledText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "emptyShade": "#FFF",
          "fullShade": "#000",
          "highlight": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.warning",
            ],
          },
          "lightShade": "#D3DAE6",
          "lightestShade": "#f0f4fb",
          "link": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.primaryText",
            ],
          },
          "mediumShade": "#98A2B3",
          "primary": "#07C",
          "primaryText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "shadow": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "subdued": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "success": "#00BFB3",
          "successText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
          "text": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.darkestShade",
            ],
          },
          "title": Computed {
            "computer": [Function],
            "dependencies": Array [
              "colors.text",
            ],
          },
          "warning": "#FEC514",
          "warningText": Computed {
            "computer": [Function],
            "dependencies": Array [],
          },
        },
        "ghost": "#FFF",
        "ink": "#000",
      },
      "font": Object {
        "baseline": Computed {
          "computer": [Function],
          "dependencies": Array [
            "base",
          ],
        },
        "body": Object {
          "scale": "s",
          "weight": "regular",
        },
        "family": "'Inter', BlinkMacSystemFont, Helvetica, Arial, sans-serif",
        "familyCode": "'Roboto Mono', Menlo, Courier, monospace",
        "featureSettings": "'calt' 1, 'kern' 1, 'liga' 1",
        "lineHeightMultiplier": 1.5,
        "scale": Object {
          "l": 1.25,
          "m": 1,
          "s": 0.875,
          "xl": 1.75,
          "xs": 0.75,
          "xxl": 2.125,
          "xxs": 0.6875,
          "xxxs": 0.5625,
        },
        "weight": Object {
          "bold": 700,
          "light": 300,
          "medium": 500,
          "regular": 400,
          "semiBold": 600,
        },
      },
      "size": Object {
        "base": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "l": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "m": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "s": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxs": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
        "xxxxl": Computed {
          "computer": [Function],
          "dependencies": Array [],
        },
      },
    }
  }
>
  <ContextProvider
    value={
      Object {
        "insert": [Function],
        "inserted": Object {},
        "key": "testing",
        "nonce": undefined,
        "registered": Object {},
        "sheet": StyleSheet {
          "_insertTag": [Function],
          "before": null,
          "container": <head />,
          "ctr": 0,
          "isSpeedy": false,
          "key": "testing",
          "nonce": undefined,
          "prepend": undefined,
          "tags": Array [],
        },
      }
    }
  >
    <EuiGlobalStyles />
  </ContextProvider>
</EuiThemeProvider>
`;

exports[`EuiProvider using \`null\` theme option does not add global styles 1`] = `<EuiThemeProvider />`;
